@@ -1,3 +1,9 @@
+Wed Jan 25 21:35:29 UTC 2012  Adam Mitz  <mitza@ociweb.com>
+
+        * tests/transport/rtps_reliability/rtps_reliability.cpp:
+
+          Release message blocks in the data_delivered() callback.
+
 Wed Jan 25 21:12:38 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * bin/dcps_tests.lst:
